# fastplong

./: .gitmodules  CMakeLists.txt
lib/nedmalloc/: CMakeLists.txt
src/: CMakeLists.txt
src/fastplong/: CMakeLists.txt  fastqreader.h  seprocessor.cpp  seprocessor.h  writerthread.cpp  writerthread.h
